<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/mark_info_sheet"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_margin="8dp"
              android:background="@drawable/rounded_layout"
              android:layout_gravity="bottom"
              app:behavior_hideable="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
                android:id="@+id/markName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/markInfoTextColor"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
        />

        <TextView
                android:id="@+id/markCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/markInfoTextColor"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/markName" android:layout_marginTop="2dp"
        />

        <TextView
                android:id="@+id/markInfoDescriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/markInfoTextColor"
                android:text="@string/mark_info_description_tag"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/markCategory" android:layout_marginTop="16dp"
        />

        <TextView
                android:id="@+id/markInfoDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/markInfoTextColor"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/markInfoDescriptionTitle" android:layout_marginTop="2dp"
        />

        <TextView
                android:id="@+id/markInfoLocationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/markInfoTextColor"
                android:text="@string/mark_info_location_tag"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/markInfoDescription" android:layout_marginTop="16dp"
        />

        <TextView
                android:id="@+id/markInfoLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/markInfoTextColor"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/markInfoLocationTitle" android:layout_marginTop="2dp"
        />

        <TextView
                android:id="@+id/markInfoDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/markInfoTextColor"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/markInfoLocation" android:layout_marginTop="2dp"
        />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/markInfoDistance" android:layout_marginTop="16dp">

            <Button
                    android:id="@+id/routeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:textSize="12dp"
                    android:text="@string/mark_info_route_button_text"
            />

            <Button
                    android:id="@+id/editButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:textSize="12dp"
                    android:text="@string/mark_info_edit_button_text"
            />

            <Button
                    android:id="@+id/shareButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:textSize="12dp"
                    android:text="@string/mark_info_share_button_text"
            />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</LinearLayout>