...
            android:layout_marginTop="16dp"
            app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_mark_name_hint" android:id="@+id/addName"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/addNameLayout"
            android:id="@+id/addDescriptionLayout" app:layout_constraintStart_toStartOf="parent"
...
            android:layout_marginTop="16dp"
            app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_mark_description_hint" android:id="@+id/addDescription"/>
    </android.support.design.widget.TextInputLayout>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:prompt="@string/select_category_spinner_prompt"
...
